# Samba

./: .gitignore  CLAUDE.md  CONTINUATION.md  DEVELOPERS.md  DG645_DelayGenerator.py  README.md  calibration.py  config.py  data_browser.py  hardware.py  install.sh  install_icon.sh  launch_samba.sh  pyproject.toml  runner.py  samba.py  script_console.py  setup_lock.py  test_runner.py
Analysis/: Jakub_methods.py  Pt(5)Co(5)_PMOKE_scan_x.py  Pt(5)Gd(3)CoFe(3)_Kerr_rotation_vs_Elliptcity.py  analysis_2D.py  analysis_field.py  analysis_field_emir.py  analyze_samba.py  samba_io.py
Cryo/: README.md  calibration.py  config.py  cryo_monitor.py  data_browser.py  defaults_panel.py  device_registry.py  hardware.py  install.sh  keithley_mixin.py  launch_samba.sh  panels.py  panels_cryo.py  play_intro.py  plot_widgets.py  requirements.txt  samba_cryo.py  samba_cryo_documentation.docx  scan.py  script_console.py  setup_lock.py  theme.py
Samba_main/: CHANGELOG.md  config.py  device_registry.py  hardware.py  install.sh  lab_notebook.py  launch_samba.sh  nstep.py  play_intro.py  plot_interact.py  samba.py  samba_summary.docx  script_console.py  server_sync.py  setup_lock.py
Samba_main/tango_devices/dg645/: DG645_DelayGenerator.py  pyproject.toml
core/: __init__.py  bd_calibration.py  calibration.py  data_browser.py  device_registry.py  easter_egg.py  hardware.py  lab_notebook.py  nstep.py  play_intro.py  plot_interact.py  plot_widgets.py  server_sync.py  setup_lock.py  theme.py
panels/: __init__.py  _widgets.py  config_list.py  hardware_panel.py  scanlist.py  setup_defaults.py  (+1 more)
(+117 files in other folders)
